[workspace]
members = [
    "collab-tests",
]
resolver = "2"

[workspace.package]
version = "0.0.1"

[workspace.metadata]
name = "collab"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "Fedimint compiled with custom module set"
license-file = "LICENSE"

[workspace.dependencies]
bdk = { version = "0.29.0", default-feature = false, features = ["all-keys", "compiler", "use-esplora-ureq" ] }
fedimintd = "0.4.3"
fedimint-api-client = "0.4.3"
fedimint-cli = "0.4.3"
fedimint-core = "0.4.3"
fedimint-server = "0.4.3"
fedimint-client = "0.4.3"
fedimint-logging = "0.4.3"
fedimint-testing = "0.4.3"
#devimint = "0.4.3"
#devimint = { path = "../fedimint/devimint" }
devimint = { git = "https://github.com/fedimint/fedimint", tag = "v0.4.3" }
aead = "0.4.3"
tbs = "0.4.3"

anyhow = "1.0.66"
#clap = { version = "4.5.4", features = ["derive", "std", "help", "usage", "error-context", "suggestions", "env"], default-features = false }
#bitcoin = "0.29.2"
schnorr_fun = { version = "0.10.0", features = [ "serde", "bincode" ]}
tracing = "0.1.37"
tokio = "1.41.0"
rand = "0.8.5"
sha2 = "0.10"
secp256k1 = { version = "0.29.0", default-features = false, features = [ "global-context" ] }
serde_json = "1.0"

[profile.dev]
split-debuginfo = "packed"

# in dev mode optimize crates that are perf-critical (usually just crypto crates)
[profile.dev.package]
secp256k1 = { opt-level = 3 }
secp256k1-zkp = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
secp256k1-zkp-sys = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
pairing = { opt-level = 3 }
rand_core = { opt-level = 3 }
byteorder = { opt-level = 3 }
zeroize = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
subtle = { opt-level = 3 }
ring = { opt-level = 3 }

[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false

[profile.release]
debug = "line-tables-only"
