[package]
name = "collab-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bdk = { workspace = true }
devimint = { workspace = true }
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-testing = { workspace = true }
rand = { workspace = true }
schnorr_fun = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
